--- a/src/Sidebar/Colors/Colors.css
+++ b/src/Sidebar/Colors/Colors.css
@@ -1,3 +1,3 @@
 .color-title {
-    margin-top: 1rem;
+    margin-top: 2rem;
   }
