--- a/src/Sidebar/Sidebar.css
+++ b/src/Sidebar/Sidebar.css
@@ -7,12 +7,22 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
   }
+
+  .sidebar::-webkit-scrollbar {
+    display: none;
+  }
+
+
   
   .logo-container {
-    margin-bottom: 1rem;
+    margin-bottom: 2.3rem;
   }
   
   .logo-container h1 {
-    margin-top: 1.3rem;
+    margin-top: 10px;
   }
